# SystemIntergration

./: LICENSE  stripe.html
01_modules/Python/: main.py
01_modules/node_commonjs/: module.js
02._data_formats/: me.csv  me.json  me.txt  me.xml  me.yaml
03_opgave/: readMyFiles.py
03_opgave/files/: test.json
03_opgave/javascript/: index-LAPTOP-I64S128F.js  index.js
03_opgave/python/: readMyFiles.py
04_encoding/: encode.py
05_basic_server/node/: app.js
05_basic_server/python/: converter.py  main.py  pyproject.toml
05_basic_server/python/files/: test.txt
05_basic_server/python/files/convertertoJson/: csvToJson.json  test1.json  xmlTojson.json
06_servver_to_server/node/: app.js
06_servver_to_server/python/: main.py  pyproject.toml
07_test/node/: index.js  package-lock.json  package.json
07_test/python/: main.py  pyproject.toml
08_pickling/python/: main.py  pyproject.toml
10_server-sent-events/python/: main.py  pyproject.toml
11_github_webhooks/node/: app.js
11_github_webhooks/python/: main.py
12_openAPi/node/: app.js  package-lock.json  package.json
12_openAPi/python/: main.py
13_github_webhooks/python/: pyproject.toml
13_openAPI_projekt/: package-lock.json  package.json
13_openAPI_projekt/node/: app.js
14_sse_example/: app.js  package-lock.json  package.json
14_sse_example/public/: index.html
15_webhooks_mendatory1_part2/exposee/: app.js  webhooks.js
16_websockets/node/: client.js  package.json  server.js
16_websockets/python/: main.py  pyproject.toml
17_uknnown/node/: app.js
17_uknnown/python/: index.html  main.py  pyproject.toml
18_mandatory2/part1/: app.js  package-lock.json  package.json
18_mandatory2/part2/: app.js  package-lock.json  package.json
19_SMS_Intergration/: app.js  lib.js  package-lock.json  package.json
20_multipart_forms/: index.html
20_multipart_forms/node/: app.js  package-lock.json  package.json
21_redis/node/: app.js
21_redis/python/basic_example/: main.py  pyproject.toml
22_graphQL/python/: data_scraper.py  pyproject.toml
23_web_crawler/: my-spider.py  pyproject.toml  web_crawler.py
23_web_crawler/wikicrawler/wikicrawler/: items.py
26_graphql_example/: app.js  package-lock.json  package.json
(+38 files in other folders)
