[tool.poetry]
name = "basic-example"
version = "0.1.0"
description = ""
authors = ["Alex8943 <65241585+Alex8943@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "basic_example"}]

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.2.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
aioredis = "2.0.0"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
